--- a/cv/templates/cv/home.html
+++ b/cv/templates/cv/home.html
@@ -130,7 +130,7 @@
     </h1>
     
     <h2 class = "fade-in fade-delay-1"> 
-        Me llamo {{ perfil.nombre }} 
+        Me llamo Jean Pierre{{ perfil.nombre }} 
     </h2>
 
     <p class = "mt-3 fade-in fade-delay-2">
